--- a/templates/menu/pages/cart.html
+++ b/templates/menu/pages/cart.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load  static %}
 {% block title  %} EShopper - Bootstrap Shop Template {% endblock title %}
 {% block h1 %} SHOPPING CART {% endblock h1 %}
