--- a/index/static/index/css/style.css
+++ b/index/static/index/css/style.css
@@ -1886,6 +1886,7 @@ pre code {
   border: 1px solid #EDF1FF;
   border-radius: 0;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -3006,16 +3007,7 @@ input[type="button"].btn-block {
   white-space: nowrap;
 }
 
-.dropdown-toggle::after {
-  display: inline-block;
-  margin-left: 0.255em;
-  vertical-align: 0.255em;
-  content: "";
-  border-top: 0.3em solid;
-  border-right: 0.3em solid transparent;
-  border-bottom: 0;
-  border-left: 0.3em solid transparent;
-}
+
 
 .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -4167,9 +4159,11 @@ input[type="button"].btn-block {
   .navbar-expand-lg {
     flex-flow: row nowrap;
     justify-content: flex-start;
+
   }
   .navbar-expand-lg .navbar-nav {
     flex-direction: row;
+
   }
   .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: absolute;
@@ -6104,7 +6098,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #EDF1FF;
+  background-color: #EDF1FF !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -9474,8 +9468,7 @@ a.text-dark:hover, a.text-dark:focus {
   outline: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
+.navbar-light .navbar-nav .nav-link:hover{
   color: #D19C97;
 }
 
@@ -9581,4 +9574,14 @@ a.text-dark:hover, a.text-dark:focus {
   100% {
     transform: translateY(-15px);
   }
+}
+
+.navbar-nav.ml-auto.py-0{
+  margin-right: 100px;
+}
+
+.form-register{
+    border-radius: 10px;
+    margin-bottom: 25px;
+    padding: 10px 20px;
 }
