--- a/index/static/index/scss/style.scss
+++ b/index/static/index/scss/style.scss
@@ -61,9 +61,8 @@ $input-placeholder-color: #999999;
     outline: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-    color: $primary;
+.navbar-light .navbar-nav .nav-link:hover{
+
 }
 
 @media (max-width: 991.98px) {
