--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -1,4 +1,4 @@
-{% extends 'base_index.html' %}
+{% extends 'base/base_index.html' %}
 {% load static %}
 {% block title %} EShopper - Bootstrap Shop Template {% endblock title %}
 
