Models have been created in the application shop(models created: products, categories). Aded several products through the admin, which are displayed on the page. Transitions to categories have been fixed. A transition to a page for viewing a specific product has been created. Created payment for all products and each category.

--- a/static/index/css/style.css
+++ b/static/index/css/style.css
@@ -5032,6 +5032,19 @@ a.badge-dark:focus, a.badge-dark.focus {
   border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
+
+.list-group-item-custom {
+  position: relative;
+  display: block;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+
+
+
+
+
 .list-group-item.disabled, .list-group-item:disabled {
   color: #6c757d;
   pointer-events: none;
