--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,5 @@
 {% load  static %}
-
+{% load static mptt_tags %}
 
 <!DOCTYPE html>
 
@@ -72,7 +72,7 @@
         </div>
         <div class="row align-items-center py-3 px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
-                <a href="" class="text-decoration-none">
+                <a href="{% url 'index' %}" class="text-decoration-none">
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
                 </a>
             </div>
@@ -113,25 +113,31 @@
                 </a>
                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Dresses <i class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Men's Dresses</a>
-                                <a href="" class="dropdown-item">Women's Dresses</a>
-                                <a href="" class="dropdown-item">Baby's Dresses</a>
+                   <ul>
+                        {% recursetree categories %}
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link" data-toggle="dropdown">{{ node.name }}</a>
+                                    <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                        {% if not node.is_leaf_node %}
+                                            {% for child in node.children.all %}
+
+                                                <ul>
+                                                    <li class="list-group"><a class="nav-item nav-link" href="{% url 'category' child.slug %}?page=1">{{ child.name }}</a></li>
+                                                </ul>
+
+                                            {% endfor %}
+                                    {% endif %}
+                                    </div>
                             </div>
-                        </div>
-                        <a href="" class="nav-item nav-link">Shirts</a>
-                        <a href="" class="nav-item nav-link">Jeans</a>
-                        <a href="" class="nav-item nav-link">Swimwear</a>
-                        <a href="" class="nav-item nav-link">Sleepwear</a>
-                        <a href="" class="nav-item nav-link">Sportswear</a>
-                        <a href="" class="nav-item nav-link">Jumpsuits</a>
-                        <a href="" class="nav-item nav-link">Blazers</a>
-                        <a href="" class="nav-item nav-link">Jackets</a>
-                        <a href="" class="nav-item nav-link">Shoes</a>
+                        {% endrecursetree %}
+                    </ul>
+
+
+
                     </div>
                 </nav>
+
+
             </div>
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
@@ -141,17 +147,17 @@
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
+                    {%  if user.is_authenticated %}
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="{% url 'index' %}" class="nav-item nav-link">Home  <i class="fa-solid fa-house"></i></a>
-                            <a href="{% url 'shop' %}" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
-                            <a href="{% url 'detail' %}" class="nav-item nav-link">Shop Detail  <i class="fa-solid fa-circle-info"></i></a>
+                            <a href="{% url 'shop' %}?page=1" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
                             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact  <i class="fa-solid fa-address-book"></i></a>
-
-
                         </div>
+
                         <div class="navbar-nav ml-auto py-0">
-									{%  if user.is_authenticated %}
+
                                        <div class="nav-item dropdown">
 
                                             <a class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa-solid fa-user"></i>   {{ user.username }}</a>
@@ -162,11 +168,22 @@
                                                 <a href="{% url 'logout' %}" class="dropdown-item">Log out    <i class="fa-solid fa-right-from-bracket"></i></a>
                                             </div>
                                         </div>
+                        {% else %}
+                        <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <div class="navbar-nav mr-auto py-0">
+                            <a href="{% url 'index' %}" class="nav-item nav-link">Home  <i class="fa-solid fa-house"></i></a>
+                            <a href="{% url 'shop' %}?page=" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="{% url 'contact' %}" class="nav-item nav-link">Contact  <i class="fa-solid fa-address-book"></i></a>
+                            <a href="{% url 'checkout' %}" class="nav-item nav-link">Checkout  <i class="fa-solid fa-money-bill"></i></a>
 
-									{% else %}
+                        </div>
+
+                        <div class="navbar-nav ml-auto py-0">
+
                                          <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
                                          <a href="{% url 'registration' %}" class="nav-item nav-link">Register</a>
-									{% endif %}
+
+						{% endif %}
                         </div>
                     </div>
                 </nav>
@@ -186,8 +203,8 @@
         </div>
     </div>
     <!-- Page Header End -->
-
-
+<br>
+<br>
 
 {% block container %}
 
@@ -256,7 +273,7 @@
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
-                <img class="img-fluid" src="{% static 'index/img/payments.png' %}" alt="">
+                <img class="img-fluid" src="{% static 'index/images/payments.png' %}" alt="">
             </div>
         </div>
     </div>
