--- a/templates/menu/index.html
+++ b/templates/menu/index.html
@@ -43,7 +43,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-1.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-1.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Men's dresses</h5>
                 </div>
@@ -52,7 +52,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-2.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-2.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Women's dresses</h5>
                 </div>
@@ -61,7 +61,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-3.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-3.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Baby's dresses</h5>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-4.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-4.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Accerssories</h5>
                 </div>
@@ -79,7 +79,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-5.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-5.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Bags</h5>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="cat-item d-flex flex-column border mb-4" style="padding: 30px;">
                     <p class="text-right">15 Products</p>
                     <a href="" class="cat-img position-relative overflow-hidden mb-3">
-                        <img class="img-fluid" src="{% static 'index/img/cat-6.jpg' %}" alt="">
+                        <img class="img-fluid" src="{% static 'index/images/cat-6.jpg' %}" alt="">
                     </a>
                     <h5 class="font-weight-semi-bold m-0">Shoes</h5>
                 </div>
@@ -103,7 +103,7 @@
         <div class="row px-xl-5">
             <div class="col-md-6 pb-4">
                 <div class="position-relative bg-secondary text-center text-md-right text-white mb-2 py-5 px-5">
-                    <img src="{% static 'index/img/offer-1.png' %}" alt="">
+                    <img src="{% static 'index/images/offer-1.png' %}" alt="">
                     <div class="position-relative" style="z-index: 1;">
                         <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
                         <h1 class="mb-4 font-weight-semi-bold">Spring Collection</h1>
@@ -113,7 +113,7 @@
             </div>
             <div class="col-md-6 pb-4">
                 <div class="position-relative bg-secondary text-center text-md-left text-white mb-2 py-5 px-5">
-                    <img src="{% static 'index/img/offer-2.png' %}" alt="">
+                    <img src="{% static 'index/images/offer-2.png' %}" alt="">
                     <div class="position-relative" style="z-index: 1;">
                         <h5 class="text-uppercase text-primary mb-3">20% off the all order</h5>
                         <h1 class="mb-4 font-weight-semi-bold">Winter Collection</h1>
@@ -135,7 +135,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-1.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-1.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -152,7 +152,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-2.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-2.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -169,7 +169,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-3.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-3.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -186,7 +186,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-4.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-4.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -203,7 +203,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-5.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-5.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -220,7 +220,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-6.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-6.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -237,7 +237,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-7.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-7.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -254,7 +254,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-8.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-8.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -304,7 +304,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-1.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-1.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -321,7 +321,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-2.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-2.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -338,7 +338,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-3.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-3.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -355,7 +355,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-4.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-4.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -372,7 +372,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-5.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-5.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -389,7 +389,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-6.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-6.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -406,7 +406,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-7.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-7.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -423,7 +423,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{% static 'index/img/product-8.jpg' %}" alt="">
+                        <img class="img-fluid w-100" src="{% static 'index/images/product-8.jpg' %}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">Colorful Stylish Shirt</h6>
@@ -448,28 +448,28 @@
             <div class="col">
                 <div class="owl-carousel vendor-carousel">
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-1.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-1.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-2.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-2.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-3.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-3.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-4.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-4.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-5.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-5.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-6.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-6.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-7.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-7.jpg' %}" alt="">
                     </div>
                     <div class="vendor-item border p-4">
-                        <img src="{% static 'index/img/vendor-8.jpg' %}" alt="">
+                        <img src="{% static 'index/images/vendor-8.jpg' %}" alt="">
                     </div>
                 </div>
             </div>
