--- a/templates/menu/pages/cart.html
+++ b/templates/menu/pages/cart.html
@@ -21,7 +21,7 @@
                     </thead>
                     <tbody class="align-middle">
                         <tr>
-                            <td class="align-middle"><img src="{% static 'index/img/product-1.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                            <td class="align-middle"><img src="{% static 'index/images/product-1.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
                             <td class="align-middle">$150</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -42,7 +42,7 @@
                             <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                         </tr>
                         <tr>
-                            <td class="align-middle"><img src="{% static 'index/img/product-2.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                            <td class="align-middle"><img src="{% static 'index/images/product-2.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
                             <td class="align-middle">$150</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -63,7 +63,7 @@
                             <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                         </tr>
                         <tr>
-                            <td class="align-middle"><img src="{% static 'index/img/product-3.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                            <td class="align-middle"><img src="{% static 'index/images/product-3.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
                             <td class="align-middle">$150</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -84,7 +84,7 @@
                             <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                         </tr>
                         <tr>
-                            <td class="align-middle"><img src="{% static 'index/img/product-4.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                            <td class="align-middle"><img src="{% static 'index/images/product-4.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
                             <td class="align-middle">$150</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
@@ -105,7 +105,7 @@
                             <td class="align-middle"><button class="btn btn-sm btn-primary"><i class="fa fa-times"></i></button></td>
                         </tr>
                         <tr>
-                            <td class="align-middle"><img src="{% static 'index/img/product-5.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
+                            <td class="align-middle"><img src="{% static 'index/images/product-5.jpg' %}" alt="" style="width: 50px;"> Colorful Stylish Shirt</td>
                             <td class="align-middle">$150</td>
                             <td class="align-middle">
                                 <div class="input-group quantity mx-auto" style="width: 100px;">
