--- a/templates/menu/test_tree.html
+++ b/templates/menu/test_tree.html
@@ -1,5 +1,6 @@
-{% load mptt_tags %}
 {% load  static %}
+{% load static mptt_tags %}
+
 
 
 
@@ -37,6 +38,7 @@
     <link href="{% static 'index/css/style.css' %}" rel="stylesheet">
     <link href="{% static 'index/css/auth.css' %}" rel="stylesheet">
 </head>
+
 
 <body>
     <!-- Topbar Start -->
@@ -105,29 +107,31 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid mb-5">
+    <div class="container-fluid">
         <div class="row border-top px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
                 <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
                     <h6 class="m-0">Categories</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
-                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+
+
+
+                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                   <ul>
+
+
+
+                    <ul class="list-group">
                         {% recursetree categories %}
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link" data-toggle="dropdown">{{ node.name }}</a>
+                                <a href="#" class="nav-link" data-toggle="dropdown">{{ node.name }} <i class="fa fa-angle-down float-right mt-1"></i></a>
                                     <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
                                         {% if not node.is_leaf_node %}
-                                            {% for child in node.children.all %}
-
-                                                <ul>
-                                                    <li class="list-group"><a class="nav-item nav-link" href="{% url 'category' child.slug %}?page=1">{{ child.name }}</a></li>
-                                                </ul>
-
-                                            {% endfor %}
-                                    {% endif %}
+                                            <ul class="list-group">
+                                                <li class="list-group-item-custom"><a href="" >{{ children }}</a></li>
+                                            </ul>
+                                        {% endif %}
                                     </div>
                             </div>
                         {% endrecursetree %}
@@ -137,9 +141,12 @@
 
                     </div>
                 </nav>
+
+
+
             </div>
             <div class="col-lg-9">
-                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
+                <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
                         <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
                     </a>
@@ -151,7 +158,7 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="{% url 'index' %}" class="nav-item nav-link">Home  <i class="fa-solid fa-house"></i></a>
-                            <a href="{% url 'shop' %}?page=1" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="{% url 'shop' %}" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
                             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact  <i class="fa-solid fa-address-book"></i></a>
                         </div>
 
@@ -171,7 +178,7 @@
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="{% url 'index' %}" class="nav-item nav-link">Home  <i class="fa-solid fa-house"></i></a>
-                            <a href="{% url 'shop' %}?page=1" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="{% url 'shop' %}" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
                             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact  <i class="fa-solid fa-address-book"></i></a>
                             <a href="{% url 'checkout' %}" class="nav-item nav-link">Checkout  <i class="fa-solid fa-money-bill"></i></a>
 
@@ -186,48 +193,30 @@
                         </div>
                     </div>
                 </nav>
-                <div id="header-carousel" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active" style="height: 410px;">
-                            <img class="img-fluid" src="{% static 'index/images/carousel-1.jpg' %}" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item" style="height: 410px;">
-                            <img class="img-fluid" src="{% static 'index/images/carousel-2.jpg' %}" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
-                        <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                            <span class="carousel-control-prev-icon mb-n2"></span>
-                        </div>
-                    </a>
-                    <a class="carousel-control-next" href="#header-carousel" data-slide="next">
-                        <div class="btn btn-dark" style="width: 45px; height: 45px;">
-                            <span class="carousel-control-next-icon mb-n2"></span>
-                        </div>
-                    </a>
-                </div>
             </div>
         </div>
     </div>
     <!-- Navbar End -->
-    {% block container %}
+    <!-- Page Header Start -->
+    <div class="container-fluid bg-secondary mb-5">
+        <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 300px">
+            <h1 class="font-weight-semi-bold text-uppercase mb-3">{% block h1 %} {% endblock h1 %}</h1>
+            <div class="d-inline-flex">
+                <p class="m-0"><a href="{% url 'index' %}">Home</a></p>
+                <p class="m-0 px-2">-</p>
+                <p class="m-0">{% block p %} {% endblock p %}</p>
+            </div>
+        </div>
+    </div>
+    <!-- Page Header End -->
+<br>
+<br>
 
-    {% endblock container %}
-    <!-- Footer Start -->
+{% block container %}
+
+{% endblock container%}
+
+<!-- Footer Start -->
     <div class="container-fluid bg-secondary text-dark mt-5 pt-5">
         <div class="row px-xl-5 pt-5">
             <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
@@ -245,7 +234,7 @@
                         <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-dark mb-2" href="{% url 'index' %}"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="{% url 'shop' %}?page=1"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-dark mb-2" href="{% url 'shop' %}"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
                             <a class="text-dark mb-2" href="{% url 'detail' %}"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
                             <a class="text-dark mb-2" href="{% url 'cart' %}"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
                             <a class="text-dark mb-2" href="{% url 'checkout' %}"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
@@ -255,8 +244,8 @@
                     <div class="col-md-4 mb-5">
                         <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
                         <div class="d-flex flex-column justify-content-start">
-                           <a class="text-dark mb-2" href="{% url 'index' %}"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="{% url 'shop' %}?page=1"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
+                            <a class="text-dark mb-2" href="{% url 'index' %}"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                            <a class="text-dark mb-2" href="{% url 'shop' %}"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
                             <a class="text-dark mb-2" href="{% url 'detail' %}"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
                             <a class="text-dark mb-2" href="{% url 'cart' %}"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
                             <a class="text-dark mb-2" href="{% url 'checkout' %}"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
@@ -322,4 +311,18 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
