--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -114,6 +114,7 @@
                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                    <ul>
+
                         {% recursetree categories %}
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link" data-toggle="dropdown">{{ node.name }}</a>
@@ -163,7 +164,7 @@
                                             <a class="nav-link dropdown-toggle" data-toggle="dropdown"><i class="fa-solid fa-user"></i>   {{ user.username }}</a>
 
                                             <div class="dropdown-menu rounded-0 m-0">
-                                                <a href="{% url 'cart' %}" class="dropdown-item">Shopping Cart  <i class="fa-solid fa-basket-shopping-simple"></i></a>
+                                                <a href="{% url 'cart' %}" class="dropdown-item">Shopping Cart  <i class="fa-solid fa-basket-shopping"></i></a>
                                                 <a href="{% url 'checkout' %}" class="dropdown-item">Checkout  <i class="fa-solid fa-money-bill"></i></a>
                                                 <a href="{% url 'logout' %}" class="dropdown-item">Log out    <i class="fa-solid fa-right-from-bracket"></i></a>
                                             </div>
@@ -172,10 +173,10 @@
                         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="{% url 'index' %}" class="nav-item nav-link">Home  <i class="fa-solid fa-house"></i></a>
-                            <a href="{% url 'shop' %}?page=" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
+                            <a href="{% url 'shop' %}?page=1" class="nav-item nav-link active">Shop  <i class="fa-solid fa-cart-shopping"></i></a>
                             <a href="{% url 'contact' %}" class="nav-item nav-link">Contact  <i class="fa-solid fa-address-book"></i></a>
                             <a href="{% url 'checkout' %}" class="nav-item nav-link">Checkout  <i class="fa-solid fa-money-bill"></i></a>
-
+                            <a href="{% url 'cart' %}" class="nav-item nav-link">Shopping Cart  <i class="fa-solid fa-basket-shopping"></i></a>
                         </div>
 
                         <div class="navbar-nav ml-auto py-0">
@@ -300,6 +301,11 @@
 
     <!-- Template Javascript -->
     <script src="{% static 'index/js/main.js' %}"></script>
+
+    <!-- AddToCart JavaScript -->
+    <script src="{% static 'index/js/addToCart.js' %}"></script>
+
+
 
 
 </body>
