--- a/templates/menu/detail.html
+++ b/templates/menu/detail.html
@@ -55,31 +55,23 @@
 
 
                 {% endif %}
-            {% endfor %}
+
+
 
                 <div class="d-flex mb-3">
                     <p class="text-dark font-weight-medium mb-0 mr-3">Sizes:</p>
+
                     <form>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-1" name="size">
-                            <label class="custom-control-label" for="size-1">XS</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-2" name="size">
-                            <label class="custom-control-label" for="size-2">S</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-3" name="size">
-                            <label class="custom-control-label" for="size-3">M</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-4" name="size">
-                            <label class="custom-control-label" for="size-4">L</label>
-                        </div>
-                        <div class="custom-control custom-radio custom-control-inline">
-                            <input type="radio" class="custom-control-input" id="size-5" name="size">
-                            <label class="custom-control-label" for="size-5">XL</label>
-                        </div>
+
+{#                        <div class="custom-control custom-radio custom-control-inline">#}
+{#                            <input type="radio" class="custom-control-input" id="size-1" name="size">#}
+{#                            <label class="custom-control-label" for="size-1">{{ product.size }}</label>#}
+{#                        </div>#}
+
+{#                        {% for color in colors %}#}
+{#							<button class="btn btn-lg choose-color" data-color="{{color.color__id}}" style="background-color: {{color.color__color_code}}"></button>#}
+{#						{% endfor %}#}
+
                     </form>
                 </div>
                 <div class="d-flex mb-4">
@@ -121,8 +113,9 @@
                             </button>
                         </div>
                     </div>
-                    <button class="btn btn-primary px-3"><i class="fa fa-shopping-cart mr-1"></i> Add To Cart</button>
+                    <button  value="{{ product.id }}" class="btn btn-primary px-3 cart" ><i class="fa fa-shopping-cart mr-1" ></i> Add To Cart</button>
                 </div>
+    {% endfor %}
                 <div class="d-flex pt-2">
                     <p class="text-dark font-weight-medium mb-0 mr-2">Share on:</p>
                     <div class="d-inline-flex">
@@ -142,6 +135,7 @@
                 </div>
             </div>
         </div>
+
         <div class="row px-xl-5">
             <div class="col">
                 <div class="nav nav-tabs justify-content-center border-secondary mb-4">
@@ -339,5 +333,6 @@
             </div>
         </div>
     </div>
+
     <!-- Products End -->
 {% endblock container %}
