--- a/templates/menu/shop.html
+++ b/templates/menu/shop.html
@@ -189,7 +189,7 @@
 
                             <div class="card-footer d-flex justify-content-between bg-light border">
                                 <a href="{% url 'detail' product.slug product.id %}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                                <button value="{{ product.id }}" class="btn btn-sm text-dark p-0 cart"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add to Cart</button>
                                 <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-heart text-primary mr-1"></i>Add to Likes</a>
                             </div>
                         </div>
